<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="com.example.jocke.joakim_nilsson_apirix_arbetsprov.MainActivity">


        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/lightGreen"
            android:minHeight="250dp">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="monospace"
                android:text="@string/toolbarTitle"
                android:textSize="36sp"
                android:typeface="normal"
                />


        </android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/distanceWalkedInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distanceWalkedInfo"
            android:textAlignment="center"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/distanceWalked"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/distanceWalked"
            android:textAlignment="center"
            android:textSize="30sp"/>

        <Spinner
            android:id="@+id/spinnerSelectedDistance"
            style="?android:attr/spinnerItemStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/spinnerdesign"
            android:gravity="center"
            android:prompt="@string/defaultSpinnerText"
            android:spinnerMode="dialog">

        </Spinner>

        <EditText
            android:id="@+id/editTextTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notificationTitle"
            android:inputType="text"/>

        <EditText
            android:id="@+id/editTextMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/notificationMessage"
            android:inputType="text"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginStart="10dip"
            android:layout_marginTop="20dip"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imgInfoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="11dip"
                android:background="@null"
                android:contentDescription="Info Text"
                android:onClick="displayPopupWindow"
                android:src="@drawable/ic_alert"/>

            <Button
                android:enabled="false"
                android:id="@+id/registerPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_toRightOf="@id/imgInfoBtn"
                android:onClick="registerPhone"
                android:text="@string/registerPhone"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/pushNotificationSender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dip"
                android:onClick="sendNotification"
                android:text="@string/sendNotification"
                android:textSize="12sp"
                />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/controlBtn"
        android:layout_width="90dip"
        android:layout_height="90dip"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dip"

        android:background="@drawable/round_button"
        android:onClick="startMeasuring"
        android:text="@string/Startmeasuring"/>
</RelativeLayout>